Fixed headshot img size on small devices

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -105,4 +105,7 @@
   .about_content p {
     margin: 1.5rem 0;
   }
+  .headshot-img {
+    width: 18rem;
+  }
 }
